--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ matrix:
     allow_failures:
         - rust: nightly
 cache: cargo
+before_install:
+    - sudo apt-get -qq update
+    - sudo apt-get install -y libmagic-dev
 script:
     - cargo build --verbose --all
