--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,9 @@ categories = ["multimedia::encoding", "multimedia::audio"]
 magic = "0.12"      # File Identification
 claxon = "0.4"      # Flac Decoder
 simplemad = "0.8"   # MPEG decoder
-# Testing
-toml = "0.4"
-serde_derive = "1.0"
-tempdir = "0.3"
-tempfile = "2.2"
-time="*"            # Benchmarking
 # Checksums
+serde_derive = "1.0"
+time="*"            # Benchmarking
 blake2 = "0.7"      # Hasher (safe)
 twox-hash = "1.1"   # Hasher (fast)
 byteorder = "1"     # Endiannes Correction
@@ -30,6 +26,11 @@ sled="0.14"         # Database
 filetime = "0.1"
 clap = "2"          # Argument parser
 
+[dev-dependencies]
+hex = "0.3"
+toml = "0.4"
+tempdir = "0.3"
+tempfile = "2.2"
 
 [profile.release]
 opt-level = 3
