--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
 cache: cargo
 before_install:
     - sudo apt-get -qq update
-    - sudo apt-get install -y libmagic-dev
+    - sudo apt-get install -y libmagic-dev libmad0-dev
 script:
     - cargo build --release --verbose --all
     - cargo test --release --verbose --all
