Move to Rust 2018
Former-commit-id: e6aff9c7c64639391038410dee1dc18e0fe7ef5f

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "musync"
 version = "0.1.0"
+edition = "2018"
 authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
 description = "A fast music syncing CLI"
 keywords = ["music", "audio", "sync", "flac", "mp3"]
